# brainhack-til-2025

./: .gitignore  .gitmodules  LICENSE  README.md  main.py  pyproject.toml
asr/: Dockerfile  pyproject.toml
asr/src/: asr_manager.py  asr_manager_with_denoising.py  asr_server.py  init_model.py
asr/src-whisper/: asr_manager.py  asr_manager_denoised.py
asr/test/: noise-reduction.ipynb  test.py
asr/train/: train.py
asr/train-parakeet/: pyproject.toml
asr/train-whisper/: dsconfig.json  pyproject.toml  train-k-fold.py  train.py
cv/: README.md  pyproject.toml  wbf.Dockerfile
cv/data-generation/: generate.ipynb
cv/src/: average_v8m_weights.ipynb
cv/src/detect_classify/: cv_manager.py  cv_server.py
cv/src/v8l/: cv_manager.py
cv/src/wbf/: cv_manager.py  ensemble.py  export_tensorrt.py
cv/src/wbf/models/: placeholder.md
ocr/: README.md  ground_truth_analysis.ipynb  preprocessing_test.py
ocr/doctr/: Dockerfile  Resources.txt  ms.Dockerfile  pyproject-deploy.toml  pyproject.toml
ocr/doctr/src/: init_model.py  ocr_manager.py  ocr_manager_onnx.py  ocr_server.py
ocr/doctr/test/: doctr_test.py
ocr/doctr/train/: training.md
ocr/doctr/train/data_prep/: Brainhack_OCR_GPT_data.txt  cleaned_final.txt  cleaned_final_train.txt  cleaned_final_val.txt  cleaned_manual.txt  dataset_prep.ipynb
ocr/doctr/utils/: onnx_export.py  trt_convert.md
ocr/others/: surya_test.py  test_with_trocr.py
ocr/others/src-surya/: init_model.py  ocr_manager.py  ocr_server.py
ocr/paddle/: .dockerignore  Dockerfile  flan.Dockerfile  paddlev5.Dockerfile  pyproject-paddle2-5.toml  pyproject-paddle3.toml  pyproject.toml
ocr/paddle/misc/: Dict_creator(symspellpy).ipynb  custom_paddle_font.py
ocr/paddle/srcs/src/: en_dict.txt  init_model-flan.py  init_model.py  init_model_sym.py  init_model_v5.py  ocr_manager.py  ocr_manager_faln.py  ocr_manager_fft.py  ocr_manager_layout.py  ocr_manager_sym.py  ocr_server-flan.py  ocr_server.py
ocr/paddle/srcs/src-cheese/: init_model.py  ocr_manager.py  ocr_server.py  pred_0.txt  pred_1.txt  pred_2.txt  pred_3.txt  pred_4.txt
ocr/paddle/srcs/src/symspell_dicts/: bigram_dict.txt  unigram_dict.txt
ocr/paddle/train/: dataset_prep.ipynb  en_PP-OCRv4_mobile_rec.yml  train_config.yml  train_config_det.yml  training.md
rl/: Dockerfile  requirements.txt
rl/qwen/: rl_manager_qwen.py
rl/src/: rl_manager.py  scout_manager.py
rl/src/ensemble_runhidetell_v10/: rl_manager.py
surprise/: .env.sample  README.md  pyproject.toml  test.py
surprise/analysis/: results_analysis.ipynb
surprise/src_cpp/: CMakeLists.txt  Dockerfile  README.md  SurpriseManager.cpp  SurpriseManager.h  metrics.cpp  metrics.h  server.cpp
surprise/src_python39/: Dockerfile  README.md  metrics.py  surprise_manager_tsp.py  surprise_server.py
surprise/src_python_initial/: surprise_manager.py
