[project]
name = "asr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.6.0",
    "dataclasses>=0.8",
    "datasets>=3.6.0",
    "deepspeed>=0.16.7",
    "evaluate>=0.4.3",
    "fastapi>=0.115.12",
    "granian>=2.2.6",
    "jiwer>=3.1.0",
    "librosa>=0.11.0",
    "mpi4py>=4.0.3",
    "soundfile>=0.13.1",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "tqdm>=4.66.5",
    "transformers>=4.51.3",
]
