[project]
name = "ocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "accelerate>=1.7.0",
    "fastapi>=0.115.12",
    "granian>=2.2.6",
    "numpy==1.26.4",
    "opencv-python==4.8.1.78",
    "paddleocr>=2.10.0",
    "paddlepaddle-gpu==3.0.0",
    "sentencepiece>=0.2.0",
    "setuptools>=80.7.1",
    "symspellpy>=6.9.0",
    "torch>=2.7.0",
    "transformers>=4.52.3",
]

[tool.uv.sources]
paddlepaddle-gpu = { index = "paddlepaddle-gpu" }

[[tool.uv.index]]
name = "paddlepaddle-gpu"
url = "https://www.paddlepaddle.org.cn/packages/stable/cu118"
explicit = true
